[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]

[node name="Menu" type="PopupPanel"]
pause_mode = 2
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.5
margin_top = -106.0
margin_right = 176.5
margin_bottom = 106.0
rect_min_size = Vector2( 256, 204 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="CenterContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 349.0
margin_bottom = 208.0

[node name="Label" type="Label" parent="CenterContainer"]
margin_right = 345.0
margin_bottom = 14.0
text = "Menu"
uppercase = true

[node name="HSeparator" type="HSeparator" parent="CenterContainer"]
margin_top = 18.0
margin_right = 345.0
margin_bottom = 22.0

[node name="Button" type="Button" parent="CenterContainer"]
margin_top = 26.0
margin_right = 345.0
margin_bottom = 66.0
rect_min_size = Vector2( 128, 40 )
text = "New project"

[node name="Button2" type="Button" parent="CenterContainer"]
margin_top = 70.0
margin_right = 345.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 40 )
text = "Save"

[node name="Button3" type="Button" parent="CenterContainer"]
margin_top = 114.0
margin_right = 345.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 40 )
text = "Load"

[node name="Button4" type="Button" parent="CenterContainer"]
margin_top = 158.0
margin_right = 345.0
margin_bottom = 198.0
rect_min_size = Vector2( 0, 40 )
text = "Export"

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -172.5
margin_top = -102.0
margin_right = 172.5
margin_bottom = 102.0
rect_min_size = Vector2( 254, 204 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SaveDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -172.5
margin_top = -102.0
margin_right = 172.5
margin_bottom = 102.0
window_title = "Save project"
access = 1
current_dir = "user://"
current_path = "user://"

[node name="OpenDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -172.5
margin_top = -102.0
margin_right = 172.5
margin_bottom = 102.0
window_title = "Otw√≥rz plik"
mode = 0
access = 1
current_dir = "user://"
current_path = "user://"

[node name="ExportDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -172.5
margin_top = -102.0
margin_right = 172.5
margin_bottom = 102.0
window_title = "Export"
access = 2
current_dir = "C:/Users/Maciej/Documents/MIDI Sequencer"
current_path = "C:/Users/Maciej/Documents/MIDI Sequencer/"
[connection signal="pressed" from="CenterContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="CenterContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="CenterContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="confirmed" from="SaveDialog" to="." method="_on_SaveDialog_confirmed"]
[connection signal="confirmed" from="OpenDialog" to="." method="_on_OpenDialog_confirmed"]
[connection signal="confirmed" from="ExportDialog" to="." method="_on_ExportDialog_confirmed"]
